# supercomp

01-intro-cpp/: ex1  ex1.cpp  ex2  ex2.cpp  ex2gen.py  ex3  ex3.cpp
02-oo-cpp/: CMakeLists.txt  avx  experimento.cpp  experimento.hpp  log.cpp  log.hpp  main.cpp  out.txt  pow3.cpp  pow3.hpp  pow3mult.cpp  pow3mult.hpp  pratica.md  sqrt.cpp  sqrt.hpp  sum.cpp  sum.hpp  sumavx.cpp  sumavx.hpp
03-stl/: tarefa1  tarefa1.cpp  tarefa2  tarefa2.cpp
04-cmake-debugging/: CMakeLists.txt  hello_world.cpp  pratica.md
05-simd-I/: pratica.md
05-simd-I/src/: ex1  ex1.cpp  ex1simd
06-simd-II/: avx-mask  avx-sqrt  avx-sqrt.cpp  avx-sub  pratica.md
08-threads-I/: CMakeLists.txt  exemplo1-threads.cpp  pi  pi-numeric-integration.cpp  pratica.md
10-threads-III/: mandel  mandel.cpp
11-thread-safety/: pi_mc.c  pi_mc_par2.cpp  pi_mc_par3.cpp  pi_mc_random.cpp  pimc  pimc_par2  pimc_par3  pimc_random  pimc_single  roteiro.md
12-tarefas/: fib  fib.cpp  pi  pi_recursivo.cpp  race  race.cpp
13-gpu-I/: ex1  ex1.cu  ex2  ex2.cu  exemplo1  pratica.md
17-gpu-final/: pi-gpu.cu  pi-mc.cu
18-mpi-intro/: hello  hello.cpp  mpi-cordless  mpi-cordless.cpp  mpi-errado  mpi-errado1  mpi-fix  mpi-fix.cpp  mpi-max  mpi-max.cpp  mpi-sort  mpi-sort.cpp  pratica.md
20-mpi-cluster/: setup.sh
projeto-01/: CMakeLists.txt  README.md  main.cpp  parser.cpp  parser.hpp
projeto-01/.ipynb_checkpoints/: relatorio-checkpoint.ipynb
projeto-01/expected/: saida7
projeto-01/input/: entrada8
projeto-02/: CMakeLists.txt  README.md  in10.txt  relatorio.ipynb  tsp.cpp
projeto-02/input/: in12.txt  in13.txt  in15.txt  in20.txt  in5.txt
projeto-03/: 2opt-sol.cu  CMakeLists.txt  README.md  cpu-sol.cpp  random-sol.cu  relatorio.ipynb
projeto-03/.ipynb_checkpoints/: Relatorio-checkpoint.ipynb
projeto-03/input/: in128.txt  in14.txt  in16.txt  in48.txt  in64.txt
projeto-04/: 2opt-mpi.cpp  CMakeLists.txt  aux.hpp  exaustive-bb.cpp  exaustive-mpi.cpp
projeto-04/.ipynb_checkpoints/: relatorio-checkpoint.ipynb
projeto-04/input/: in10.txt  in256.txt  in32.txt  in8.txt
